--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <div class="back d-flex ">
 
-    <div class="container d-flex">
+    <div class="container d-flex carousel">
 
       <div class="img-wrapper">
         <!-- <img class="images hide" src="consegna/img/01.webp" > -->
